@startuml
'https://plantuml.com/class-diagram

class Application {
    workerList: List<Worker>
    +getList()
    +printTable()
}

class getList{
    Reads input.txt within the method
    output: List<Worker> workerList
}

class printTable{
    input: List<Worker> workerList
    output: void
}

class Worker {
    firstName: String
    lastName: String
    salary: Integer

    +getFirstName()
    +setFirstName()
    +getLastName()
    +setLastName()
    +getSalary()
    +setSalary()
    +toString()
}

Application <|- Worker
Application <-- getList
Application <-- printTable

@enduml